<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:scrollbars="none"
    android:layout_weight="1"
    android:background="@android:color/white"
    android:id="@+id/infoScrollView"
    android:fillViewport="true"
    >
<LinearLayout 
    android:id="@+id/infoLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="36dp"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/appInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/appInfoText" >

    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/btnLevel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level1"
        android:background="@drawable/buttonbg" />

    <Button
        android:id="@+id/btnLevel2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level2"
        android:background="@drawable/buttonbg" />

    <Button
        android:id="@+id/btnLevel3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level3"
        android:background="@drawable/buttonbg" />
    
    <Button
        android:id="@+id/btnLevel4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level4"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs"
        android:background="@drawable/buttonbg" />

</LinearLayout> <!-- </RelativeLayout> -->
</ScrollView>

